# academic-mcp-server-copilot

./: .gitignore  README.md  pyproject.toml
src/academic_mcp_server/: __init__.py  __main__.py  server.py
src/academic_mcp_server/common/: __init__.py  cache.py  config.py  models.py  normalize.py
src/academic_mcp_server/connectors/: __init__.py  arxiv.py  crossref.py  openalex.py  semantic_scholar.py
